[package]
name = "cabinpkg-registry-file"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local file-registry layout, package-index mutation, and atomic publish for Cabin."

[lib]
name = "cabin_registry_file"

[dependencies]
cabin-core = { workspace = true }
cabin-fs = { workspace = true }
cabin-package = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
predicates = "3"
sha2 = { workspace = true }
