[package]
name = "cabinpkg-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dependency resolver for Cabin"

[lib]
name = "cabin_resolver"

[dependencies]
cabin-core = { workspace = true }
cabin-index = { workspace = true }
miette = { workspace = true, features = ["derive"] }
pubgrub = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
miette = { workspace = true, features = ["fancy"] }

[lints]
workspace = true
