[package]
name = "cabin-source-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Reusable C and C++ source/header discovery for Cabin developer tools."

[dependencies]
ignore = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
