[package]
name = "cabinpkg-source-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "C/C++ source discovery for Cabin"

[lib]
name = "cabin_source_discovery"

[dependencies]
cabin-fs = { workspace = true }
ignore = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }

[lints]
workspace = true
