[package]
name = "cabin-system-deps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "pkg-config probing for Cabin's `system = true` dependency declarations."

[dependencies]
cabin-core = { workspace = true }
cabin-env = { workspace = true }
miette = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }

# Tiny stand-in for `pkg-config` used by the test suite. Pinned
# behind the `test-fake-pkg-config` feature so a plain
# `cargo install cabin-system-deps` does not pull it in. Tests
# point `CABIN_PKG_CONFIG` at this binary so the probe layer is
# exercised without depending on a host-installed library.
[features]
test-fake-pkg-config = []

[[bin]]
name = "cabin-system-deps-fake-pkg-config"
path = "src/bin/fake_pkg_config.rs"
required-features = ["test-fake-pkg-config"]

