[package]
name = "cabinpkg-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Test planner and runner for Cabin"

[lib]
name = "cabin_test"

[dependencies]
cabin-build = { workspace = true }
cabin-core = { workspace = true }
cabin-workspace = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }

[lints]
workspace = true
